--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,30 @@
-version: 2
+version: 2.1
+
 jobs:
-  unit_test:
+  build:
     docker:
-      - image: circleci/python:3.6.1
+      - image: circleci/python:3.8
 
     working_directory: ~/repo
 
     steps:
       - checkout
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "requirements.txt" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+      - run:
+          name: Upgrade pip
+          command: python -m pip install --upgrade pip
+            
 
       - run:
-          name: install dependencies
+          name: Build project
           command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
-
-      - save_cache:
-          paths:
-            - ./venv
-          key: v1-dependencies-{{ checksum "requirements.txt" }}
-
-      # run tests!
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            pytest test/test.py
+            # Add build commands here
+            echo "Build command 1"
+            echo "Build command 2"
+            # ...
 
 workflows:
   version: 2
-  build:
+  build_workflow:
     jobs:
-      - unit_test
+      - build
