--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,6 @@ jobs:
       - run:
           name: Upgrade pip
           command: python -m pip install --upgrade pip
-            
 
       - run:
           name: Build and Package
@@ -29,7 +28,8 @@ jobs:
 
             # Move the generated package artifacts to the artifacts directory
             mv dist/* artifacts/
-- persist_to_workspace:
+
+      - persist_to_workspace:
           root: .
           paths:
             - artifacts/
@@ -50,12 +50,14 @@ jobs:
           command: |
             echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
             docker build -t karthik4544/fastapi:latest .
-            docker push karthik4544/fastapi:latest .
-            
+            docker push karthik4544/fastapi:latest
+
       - store_artifacts:
           path: artifacts
+
 workflows:
   version: 2
   build_workflow:
     jobs:
       - build
+      - publish
