--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,14 +20,17 @@ jobs:
             # Install dependencies
             pip install -r requirements.txt
 
-            # Build your Python package
-            python setup.py sdist bdist_wheel
-
             # Create the artifacts directory if it doesn't exist
             mkdir -p artifacts
 
-            # Move the generated package artifacts to the artifacts directory
-            mv dist/* artifacts/
+            # Move to the root directory
+            cd ~/repo
+
+            # Run the custom build script
+            ./build.sh
+
+            # Move the generated artifacts to the artifacts directory
+            mv <path_to_artifacts>/* artifacts/
 
       - persist_to_workspace:
           root: .
@@ -39,3 +42,4 @@ workflows:
   build_workflow:
     jobs:
       - build
+
