--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,19 +20,13 @@ jobs:
             # Install dependencies
             pip install -r requirements.txt
 
-            # Create the artifacts directory if it doesn't exist
+            # Build your Python package
+            python setup.py sdist bdist_wheel
+
+            # Create a directory to store the artifacts
             mkdir -p artifacts
 
-            # Move to the root directory
-            cd ~/repo
-
-            # Check if the required file exists
-            if [ ! -f "file.txt" ]; then
-              echo "File.txt is missing. Aborting the build."
-              exit 1
-            fi
-
-            # Move the generated artifacts to the artifacts directory
+            # Move the generated package artifacts to the artifacts directory
             mv dist/* artifacts/
 
       - persist_to_workspace:
@@ -40,9 +34,30 @@ jobs:
           paths:
             - artifacts/
 
+  publish:
+    docker:
+      - image: circleci/python:3.8
+
+    steps:
+      - attach_workspace:
+          at: .
+
+      - setup_remote_docker:
+          version: 20.10.7
+
+      - run:
+          name: Push Docker Image to Docker Hub
+          command: |
+            echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+            docker build -t karthik4544/fastapi:latest .
+            docker push karthik4544/fastapi:latest
+
+      - store_artifacts:
+          path: artifacts
+
 workflows:
   version: 2
   build_workflow:
     jobs:
       - build
-
+      - publish
